[package]
name = "x64_to_wasm_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For reading ELF binaries
object = "0.36"
# For x86-64 disassembly
iced-x86 = "1.21"
# For WASM encoding
wasm-encoder = "0.222"
# For symbol resolution
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
